[gd_scene load_steps=31 format=3 uid="uid://dxveuoeu30asw"]

[ext_resource type="PackedScene" uid="uid://b4wpmxmaqv5sv" path="res://Scenes/basic_enemy.tscn" id="1_arptl"]
[ext_resource type="Script" path="res://fire_ball.gd" id="2_7wm8j"]
[ext_resource type="Texture2D" uid="uid://da4kindmrx61t" path="res://Monster Creature Pack/fire_skull.png" id="2_alyvo"]
[ext_resource type="Texture2D" uid="uid://cytihwwbup4o7" path="res://Assets/light.png" id="3_11riw"]
[ext_resource type="Script" path="res://scripts/firey_attack_state.gd" id="4_apaws"]
[ext_resource type="PackedScene" uid="uid://c22ey4hsh37ya" path="res://Scenes/detection_area.tscn" id="4_lr86v"]
[ext_resource type="Script" path="res://scripts/firey_follow_state.gd" id="6_w2grg"]
[ext_resource type="Script" path="res://scripts/firey_die_state.gd" id="6_whyo4"]
[ext_resource type="Script" path="res://scripts/firey_run_state.gd" id="8_55w20"]
[ext_resource type="Script" path="res://scripts/hurt_state.gd" id="9_ck3bw"]
[ext_resource type="Texture2D" uid="uid://c56xu5t2tiwy2" path="res://Assets/wizard_spritesheet.png" id="11_y5s0v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o2544"]
radius = 5.02494

[sub_resource type="CircleShape2D" id="CircleShape2D_ihylc"]
radius = 54.2039

[sub_resource type="CircleShape2D" id="CircleShape2D_qxwqd"]
radius = 5.0

[sub_resource type="Animation" id="Animation_hxk5c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PointLight2D:texture_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.25]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_xdl66"]
resource_name = "attack_down"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_158ix"]
resource_name = "attack_left"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_urxfe"]
resource_name = "attack_right"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_7tnc0"]
resource_name = "attack_up"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_lecga"]
resource_name = "die_left"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_2yfuk"]
resource_name = "die_right"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_2x1qr"]
resource_name = "hurt_down"
length = 0.45
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [29, 28, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jv0n0"]
resource_name = "hurt_left"
length = 0.45
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [21, 20, 21]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wa1xx"]
resource_name = "hurt_right"
length = 0.45
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [17, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_kfk5h"]
resource_name = "hurt_up"
length = 0.45
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [25, 24, 25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_n6g2e"]
resource_name = "walk_down"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:texture_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.25, 0.3, 0.25, 0.2]
}

[sub_resource type="Animation" id="Animation_x0qug"]
resource_name = "walk_left"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:texture_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.25, 0.3, 0.25, 0.2]
}

[sub_resource type="Animation" id="Animation_x6k4l"]
resource_name = "walk_right"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:texture_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.25, 0.3, 0.25, 0.2]
}

[sub_resource type="Animation" id="Animation_loy4r"]
resource_name = "walk_up"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:texture_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.0002, 0.0003, 0.0004, 0.142857, 0.142957, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.25, 0.25, 0.25, 0.25, 0.25, 0.3, 0.234247, 0.25, 0.2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lywi1"]
_data = {
"RESET": SubResource("Animation_hxk5c"),
"attack_down": SubResource("Animation_xdl66"),
"attack_left": SubResource("Animation_158ix"),
"attack_right": SubResource("Animation_urxfe"),
"attack_up": SubResource("Animation_7tnc0"),
"die_left": SubResource("Animation_lecga"),
"die_right": SubResource("Animation_2yfuk"),
"hurt_down": SubResource("Animation_2x1qr"),
"hurt_left": SubResource("Animation_jv0n0"),
"hurt_right": SubResource("Animation_wa1xx"),
"hurt_up": SubResource("Animation_kfk5h"),
"walk_down": SubResource("Animation_n6g2e"),
"walk_left": SubResource("Animation_x0qug"),
"walk_right": SubResource("Animation_x6k4l"),
"walk_up": SubResource("Animation_loy4r")
}

[node name="Firey" instance=ExtResource("1_arptl")]
scale = Vector2(4, 4)
script = ExtResource("2_7wm8j")

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("CircleShape2D_o2544")

[node name="Sprite2D" parent="Pivot" index="0"]
position = Vector2(0, -4)
texture = ExtResource("2_alyvo")
hframes = 4
vframes = 10

[node name="GapDetector" parent="Pivot" index="1"]
visible = false

[node name="WallDetector" parent="Pivot" index="2"]
visible = false

[node name="PlayerDetector" parent="Pivot" index="3"]
visible = false

[node name="AttackBox" parent="Pivot" index="4"]
collision_layer = 150
collision_mask = 255
monitoring = true

[node name="CollisionShape2D" parent="Pivot/AttackBox" index="0"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_ihylc")
disabled = false

[node name="CollisionShape2D" parent="Pivot/Hurtbox" index="0"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_qxwqd")

[node name="DetectionArea" parent="." index="2" instance=ExtResource("4_lr86v")]
scale = Vector2(0.21, 0.21)

[node name="FiniteStateMachine" parent="." index="3" node_paths=PackedStringArray("current_state", "animator", "actor", "pivot")]
current_state = NodePath("RunState")
animator = NodePath("../AnimationPlayer")
actor = NodePath("..")
pivot = NodePath("../Pivot")

[node name="AttackState" type="Node" parent="FiniteStateMachine" index="0"]
script = ExtResource("4_apaws")

[node name="DieState" type="Node" parent="FiniteStateMachine" index="1"]
script = ExtResource("6_whyo4")

[node name="FollowState" type="Node" parent="FiniteStateMachine" index="2"]
script = ExtResource("6_w2grg")

[node name="RunState" type="Node" parent="FiniteStateMachine" index="3"]
script = ExtResource("8_55w20")

[node name="HurtState" type="Node" parent="FiniteStateMachine" index="4"]
script = ExtResource("9_ck3bw")

[node name="VisibleOnScreenEnabler2D" parent="." index="6"]
visible = false

[node name="AnimationPlayer" parent="." index="7"]
libraries = {
"": SubResource("AnimationLibrary_lywi1")
}

[node name="PointLight2D" type="PointLight2D" parent="." index="8"]
visible = false
texture = ExtResource("3_11riw")
texture_scale = 0.25

[node name="Sprite2D" type="Sprite2D" parent="." index="9"]
texture = ExtResource("11_y5s0v")
hframes = 10
vframes = 3
frame = 10

[connection signal="body_entered" from="Pivot/AttackBox" to="." method="_on_attack_box_entered"]
[connection signal="body_exited" from="Pivot/AttackBox" to="." method="_on_attack_box_exited"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_death_animation_finished"]

[editable path="Pivot/AttackBox"]
[editable path="DetectionArea"]
